sn-development-k8s/pt/deployment-pt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-pt
  template:
    metadata:
      labels:
        app: sn-pt
    spec:
      containers:
        - name: sn-pt
          image: quoiwowai/sn-pt
          # resources:
          #   requests:
          #     cpu: "0.5"     
          #     memory: "1.5Gi"
          resources:
            limits:
              cpu: "2"      # Giới hạn tối đa 2 cores
              memory: "1.5Gi" # Giới hạn tối đa 4GB RAM
            requests:
              cpu: "1"      # Yêu cầu 1 core
              memory: "1.5Gi"
          ports:
            - name: pt
              containerPort: 9000
            - name: rtmp
              containerPort: 1935
      imagePullSecrets:
        - name: registry # Tên secret đã tạo
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: magnum.openstack.org/nodegroup
      #               operator: In
      #               values:
      #                 - ng-media
