sn-development-k8s/pt/rtmp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
  name: pt-rtmp
spec:
  selector:
    app: sn-pt
  ports:
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: 1935
  type: LoadBalancer
